syntax = "proto3";
package dymensionxyz.dymension.rollapp;

option go_package = "github.com/dymensionxyz/dymint/types/pb/dymensionxyz/dymension/rollapp";

import "gogoproto/gogo.proto";
import "types/dymensionxyz/dymension/rollapp/state_info.proto";
import "types/cosmos/base/v1beta1/coin.proto";

// LivenessEvent stores upcoming slash/jail actions on sequencers of rollapps
message LivenessEvent {
  reserved 3;
  // RollappId of relevant rollapp
  string rollapp_id = 1;
  // HubHeight when event will occur
  int64 hub_height = 2;
}